# blogspot_to_markdown

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
blogspot_to_markdown/: __init__.py  cli.py  exporter.py
tests/: test_cli.py  test_exporter.py
