[project]
name = "blogspot-to-markdown"
version = "0.1.0"
description = "Export Blogspot posts to Markdown files."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdownify==0.13.1",
    "requests==2.32.3",
]

[project.scripts]
blogspot-to-markdown = "blogspot_to_markdown.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
