[project]
name = "blogspot-to-markdown"
version = "0.1.0"
description = "Export Blogspot posts to Markdown files."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12",
    "markdownify==0.13.1",
    "PyYAML>=6.0",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
blogspot-to-markdown = "blogspot_to_markdown.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
